<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".Principales.Estadisticas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView9"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/flower" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:padding="5dp"
            android:text="@string/app_title"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:text="@string/stats"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="Dia"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="Mes"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="Año"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="142dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_day"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:entries="@array/days_array"
            android:prompt="@string/days_prompt" />

        <Spinner
            android:id="@+id/spinner_month"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:entries="@array/month_array"
            android:prompt="@string/month_prompt" />

        <Spinner
            android:id="@+id/spinner_year"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:entries="@array/year_array"
            android:prompt="@string/year_prompt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_estadistica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/circular_corner_red"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Temperatura: 22" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Hora : 03:00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/circular_corner_blue"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Temperatura: 24" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Hora: 12:00" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="207dp"
        android:background="@drawable/circular_corner_green"
        android:text="Buscar"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

</RelativeLayout>